# nos-snn-networking

./: CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  README.md  Security Policy.md  pyproject.toml  requirements.txt
ablation/: README.md
docs/: index.html
docs/demos/: A_NOS_Spiking_Network_Demo.html  B_NOS_ topology_margin_demo.html  C_Event_coupling_vs_coupling-through-nonlinearity.html
notebooks/: 01_op_margin_main.ipynb  02_op_margin_methods.ipynb  03_spectral_verification_gershgorin.ipynb  04_Bifurcation_fig_table.ipynb  05_Noisesensitity_Amplitude.ipynb  06_Avalanche_PS_CCDF.ipynb  07_Queue_baselines_vs_NOS.ipynb  08_Queue_MLs_vs_NOS.ipynb  09_NOS_NET_dynamics.ipynb  10_NOSvsML_Forecasters.ipynb  11_synchrony_transition.ipynb  README.md
src/: README.md  linearisation.py  metrics.py  nos.py  topology.py
tests/: test_imports.py
